--- a/_config.yml
+++ b/_config.yml
@@ -6,17 +6,16 @@ url: https://caihanlin.com
 
 # Owner/author information
 owner:
-  name: Hanlin Cai
-  avatar: hanlin.jpg
+  name: Heng Cao
+  avatar: HengCao2.jpg
  # bio:
-  email: hanlin.cai@ieee.org
+  email: hengcao@ustc.edu.cn
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter: lancecai2002
-  # facebook: caihanlin2002
-  github: GuangLun2000
-  linkedin: hanlincai
+  twitter: HengCaoNSRL
+  ORCID: https://orcid.org/my-orcid?orcid=0000-0002-7398-1511
+  Researcher ID: https://www.webofscience.com/wos/author/record/HMD-3447-2023
   scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
-  # instagram: lancecai2002
+  # instagram: 
   # lastfm:
   # tumblr:
   # For Google Authorship https://plus.google.com/authorship
