--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ owner:
   twitter: HengCaoNSRL
   ORCID: https://orcid.org/my-orcid?orcid=0000-0002-7398-1511
   Researcher ID: https://www.webofscience.com/wos/author/record/HMD-3447-2023
-  scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
+  scholar: https://scholar.google.com/citations?hl=zh-CN&user=uvOmiS0AAAAJ
   # instagram: 
   # lastfm:
   # tumblr:
