--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ owner:
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter: HengCaoNSRL
   ORCID: https://orcid.org/my-orcid?orcid=0000-0002-7398-1511
+  ORCID: https://orcid.org/my-orcid?orcid=0000-0002-7398-1511
   Researcher ID: https://www.webofscience.com/wos/author/record/HMD-3447-2023
   scholar: https://scholar.google.com/citations?hl=zh-CN&user=uvOmiS0AAAAJ
   # instagram: 
