--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ owner:
   ORCID: https://orcid.org/my-orcid?orcid=0000-0002-7398-1511
   Researcher ID: https://www.webofscience.com/wos/author/record/HMD-3447-2023
   scholar: https://scholar.google.com/citations?hl=zh-CN&user=uvOmiS0AAAAJ
+  researchgate: https://www.researchgate.net/profile/Heng-Cao-7
 
 # Analytics and webmaster tools stuff goes here
 # https://search.google.com/search-console/ownership
