--- a/_config.yml
+++ b/_config.yml
@@ -71,5 +71,7 @@ disqus:
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "minimal-mistakes.sublime-project", "minimal-mistakes.sublime-workspace"]
+sass:
+  style: compressed
 
 # Latest update in 2023/09/14 by Heng Cao.
